# next-role

./: .cursorignore  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  docker-compose.yml  next-role.code-workspace  skills-lock.json
backend/: .dockerignore  .gitignore  ARCHITECTURE.md  CLAUDE.md  Dockerfile  README.md  init.sql  logging.json  pyproject.toml
backend/agents/: auth.py  files_api.py
backend/agents/career_agent/: CAREER_AGENT.md  README.md  agents.py  middleware.py  object_backend.py  object_storage.py  prompts.py  scope.py  shell_backend.py  subagents.yaml  tools.py  utils.py
backend/api/: _factory_utils.py  asgi_transport.py  asyncio.py  cache.py  cli.py  command.py  cron_scheduler.py  errors.py  feature_flags.py  graph.py  http.py  http_metrics.py  logging.py  metrics_datadog.py  otel_context.py  patch.py  queue_entrypoint.py  route.py  schema.py  self_hosted_logs.py  serde.py  server.py  sse.py  state.py  store.py  stream.py  stream_v2.py  webhook.py  worker.py
backend/api/_checkpointer/: __init__.py  _adapter.py
backend/api/api/: __init__.py  a2a.py  assistants.py  event_streaming.py  meta.py  openapi.py  profile.py  runs.py  store.py  threads.py  ui.py
backend/api/auth/: custom.py  middleware.py
backend/api/config/: __init__.py  _parse.py
backend/api/encryption/: __init__.py  aes_json.py  custom.py  middleware.py  shared.py
backend/api/event_streaming/: event_normalizers.py  service.py  session.py  types.py
backend/api/grpc/: client.py  server.py
backend/api/js/: base.py  remote.py  ui.py
backend/api/lc_security/: __init__.py  policy.py  transport.py
backend/api/middleware/: ensure_store.py  http_logger.py  request_id.py
backend/api/models/: run.py
backend/api/timing/: __init__.py  profiler.py  timer.py
backend/api/tunneling/: cloudflare.py
backend/api/utils/: __init__.py  errors.py  extract.py  headers.py  retriable_client.py
backend/app/career_agent/: AGENTS.md  README.md  agents.py  middleware.py  prompts.py  subagents.yaml  tools.py  utils.py
backend/core_server/: README.md  __main__.py  _convert.py  _forward.py  db.py  redis_db.py
backend/core_server/servicers/: admin.py  assistants.py  cache.py  checkpointer.py  crons.py  runs.py  threads.py
backend/grpc_common/: checkpointer.py  serde.py
backend/grpc_common/conversion/: __init__.py  checkpoint.py  config.py  durability.py  value.py
backend/grpc_common/proto/: core_api_pb2.py  enum_cron_on_run_completed_pb2_grpc.py  enum_durability_pb2_grpc.py  enum_multitask_strategy_pb2_grpc.py  enum_thread_status_pb2_grpc.py
backend/langgraph_api/: _factory_utils.py  asgi_transport.py  asyncio.py  cache.py  cli.py  command.py  cron_scheduler.py  errors.py  graph.py  http.py  http_metrics.py  logging.py  metadata.py  metrics_datadog.py  otel_context.py  patch.py  queue_entrypoint.py  release_tags.py  route.py  schema.py  self_hosted_metrics.py  serde.py  server.py  sse.py  state.py  store.py  stream.py  stream_v2.py  validation.py  webhook.py  worker.py
backend/langgraph_api/_checkpointer/: __init__.py  _adapter.py  protocol.py
backend/langgraph_api/api/: __init__.py  a2a.py  assistants.py  event_streaming.py  meta.py  openapi.py  profile.py  runs.py  store.py  threads.py  ui.py
backend/langgraph_api/auth/: custom.py  middleware.py  noop.py
backend/langgraph_api/config/: __init__.py  _parse.py  schemas.py
backend/langgraph_api/encryption/: context.py  custom.py  middleware.py  shared.py
backend/langgraph_api/event_streaming/: constants.py  service.py  session.py  state_normalizers.py
backend/langgraph_api/grpc/: client.py  server.py
backend/langgraph_api/js/: remote.py  ui.py
backend/langgraph_api/lc_security/: policy.py  transport.py
backend/langgraph_api/models/: run.py
backend/langgraph_api/timing/: profiler.py  timer.py
backend/langgraph_api/tunneling/: cloudflare.py
backend/langgraph_api/utils/: __init__.py  errors.py  headers.py  network.py
backend/langgraph_grpc_common/: checkpointer.py
backend/langgraph_grpc_common/conversion/: checkpoint.py  config.py  value.py
backend/langgraph_grpc_common/proto/: __init__.py  checkpointer_pb2.py  checkpointer_pb2.pyi  checkpointer_pb2_grpc.py  checkpointer_pb2_grpc.pyi  core_api_pb2.py  core_api_pb2.pyi  core_api_pb2_grpc.py  core_api_pb2_grpc.pyi  encryption_pb2.py  encryption_pb2.pyi  encryption_pb2_grpc.py  encryption_pb2_grpc.pyi  engine_common_pb2.py  engine_common_pb2.pyi  engine_common_pb2_grpc.py  engine_common_pb2_grpc.pyi  enum_cancel_run_action_pb2.py  enum_cancel_run_action_pb2.pyi  enum_cancel_run_action_pb2_grpc.py  enum_control_signal_pb2.py  enum_control_signal_pb2.pyi  enum_control_signal_pb2_grpc.py  enum_cron_on_run_completed_pb2.py  enum_cron_on_run_completed_pb2.pyi  enum_cron_on_run_completed_pb2_grpc.py  enum_durability_pb2.py  enum_durability_pb2.pyi  enum_durability_pb2_grpc.py  enum_multitask_strategy_pb2.py  enum_multitask_strategy_pb2.pyi  enum_multitask_strategy_pb2_grpc.py  enum_run_status_pb2.py  enum_run_status_pb2.pyi  enum_run_status_pb2_grpc.py  enum_stream_mode_pb2.py  enum_stream_mode_pb2.pyi  enum_stream_mode_pb2_grpc.py  enum_thread_status_pb2.py  enum_thread_status_pb2.pyi  (+8 more)
backend/langgraph_runtime/: __init__.py
backend/langgraph_runtime_postgres/: __init__.py  checkpoint.py  custom_encryption_serializer.py  database.py  lifespan.py  long_query_monitor.py  metrics.py  migrate.py  queue.py  redis.py  retry.py  store.py
backend/runtime/: __init__.py
backend/runtime_postgres/: __init__.py  checkpoint.py  custom_encryption_serializer.py  database.py  lifespan.py  long_query_monitor.py  metrics.py  migrate.py  queue.py  redis.py  routes.py  store.py
backend/server/: logging.json
backend/server/api/: _factory_utils.py  asgi_transport.py  asyncio.py  cache.py  cli.py  command.py  cron_scheduler.py  errors.py  graph.py  http.py  http_metrics.py  sse.py  (+17 more)
backend/tests/: test_career_agent_middleware.py  test_career_agent_tools.py  test_files_api.py  test_files_api_auth.py
(+435 files in other folders)
